MDEV-30698 Cover missing test cases for mariadb-binlog options --raw [and] --flashback

- Adding test case for --raw without -R
- Adding unsuported combination of --raw and --flashback parameters and
covered with test case