client/mysqlbinlog.cc
@@ -3063,6 +3063,12 @@ int main(int argc, char** argv)
 
   my_set_max_open_files(open_files_limit);
 
+  if (opt_flashback && opt_raw_mode)
+  {
+    error("The --raw mode is not allowed with --flashback mode");
+    die(1);
+  }
+
   if (opt_flashback)
   {
     my_init_dynamic_array(&binlog_events, sizeof(LEX_STRING), 1024, 1024,
